@@ -1,3 +1,10 @@
+2007-05-19  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/termdocmatrix.R (textvector): Small fix for dealing with empty
+	vectors. Thanks to Ariel Maguyon for his error report.
+	(removeSparseTerms): New function to remove columns from a
+	term-document matrix exceeding a sparse factor.
+
 2007-05-15  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* man/tmUpdate.Rd: Corrected documentation on readerControl parameter.
